Fix(TL): Edit MainFram align

--- a/src/main/webapp/resources/css/TraditionalLiquor/main.css
+++ b/src/main/webapp/resources/css/TraditionalLiquor/main.css
@@ -1,24 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    -webkit-user-drag: none;
-    
-}
-
 /* 스크롤바 없애기 */
 body {
   overflow-x: hidden; 
   overflow-y: auto
 }
-  
    
-
-   .container {
-    /* border: 1px solid black; */
-    /* background-color: gold; */
-    width: 1920px;
-    
-  }
 
 /* 드래그 색상 */
 *::selection {
@@ -31,13 +16,13 @@ body {
 
 /* 상단 배경 */
 #main-paper { 
-    width: 1920px;
+    width: 100%;
     height: 700px;
     float: left;
 }
 
 #main-box {
-    width: 1920px;
+    width: 100%;
     height: 700px;
     background-color: #FCF2D7;
     opacity: .7;
@@ -53,8 +38,8 @@ body {
 }
 
 #alcohols_main {
-    position: absolute;
-    top : 210px;
+    position: relative;
+    top : -480px;
     left: 1200px;
     width: 550px;
 }
@@ -62,7 +47,7 @@ body {
 
 /* 상단 붙박이 네비게이션 */
 .attach-nav {
-    width: 1920px;
+    width: 100%;
     height: 100px;
     background-color: #FCF2D7;
     opacity: .5;
@@ -99,10 +84,15 @@ body {
 }
 
 /* 우측 붙박이 설명 */
+.vertical-text-container {
+	display: flex;
+	position: fixed;
+}
+
 .vertical-text {
     writing-mode: vertical-rl;
-    position: fixed;
-    top : 160px;
+    position: relative;
+    top : -540px;
     left: 1840px;
 }
 
@@ -117,9 +107,13 @@ body {
     /* background-color: gold; */
     display: block;
     align-items: center;
+    position: relative;
+    top: -425px;
+    left: 850px;
+    
 }
 
-.subscribe input {
+.subscribe-btn {
     width: 230px;
     height: 85px;
     border-radius: 30px;
@@ -130,12 +124,12 @@ body {
     letter-spacing: .3em;
     border: none;
     margin : auto;
-    position: relative;
-    top:-45px;
+/*     position: relative; */
+/*     top:-420px; */
     cursor: pointer;
 }
 
-.subscribe input:active {
+.subscribe-btn:active {
     box-shadow: inset .3rem .4rem .5rem #ac956c; 
 }
 
@@ -145,9 +139,9 @@ body {
     width: 100%;
     text-align: center;
     position: relative;
-    top: 50px;
-    margin-bottom: 50px;
-    
+    top: -350px;
+    /* margin-bottom: 50px; */
+    color: rgb(180, 145, 98);
 }
 
 .search input {
@@ -159,6 +153,12 @@ body {
     font-size: 1.2em;
 }
 
+.glyphicon-search {
+	font-size: 2em;
+	position: relative;
+	left: -50px;
+	top: 8px;
+}
 
 
 
@@ -172,7 +172,9 @@ body {
     display: flex;
     align-items: center;
     color : transparent;
-
+    position: relative;
+    top: -320px;
+	float: left;
 }
 
 .middle-container {
@@ -244,7 +246,7 @@ body {
 .divide-line {
   border: 1px solid rgb(151, 151, 151);
   width: 1000px;
-  margin: 100px auto;
+  margin: 50px auto;
 
 }
 
@@ -470,11 +472,12 @@ button:hover{
     height: auto;
     /* background-color: gold; */
     /* border: 1px solid black; */
+    margin-top: -150px;
 
 }
 
 footer{
-    width: 1920px;
+    width: 100%;
     border-top: 2px solid rgb(187, 187, 187);
     margin-top: 100px;
     padding: 30px 40px;
